--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npx ts-node script/deploy.ts",
+    "transfer": "npx ts-node script/transfer.ts"
   },
   "keywords": [],
   "author": "",
